# ParcelLab

./: .gitignore  README.md  check_fhapd_dataset_v2.py  inspect_abnormal_samples.py  main.py  pyproject.toml  validate_boundary_distance_quality.py
data/: data_interface.py  fhapd_dataset.py  ftw_dataset.py
docs/: GRAPH.md
docs/superpowers/plans/: 2026-06-02-ftw-dataset.md
docs/superpowers/specs/: 2026-06-02-ftw-dataset-design.md
losses/: __init__.py  loss.py
model/: hbg_net.py  model_interface.py
others/: download_ftw.py  predict_ftw.py
scripts/fhapd/: analyze_boundary_distance.py  analyze_fhapd_augmentation.py  analyze_fhapd_augmentation_v2.py  analyze_fhapd_filename_structure.py  dataset_inspector.py  generate_boundary_distance.py  identify_exact_augmentation.py
tests/: show_tif.py  test_data_interface.py  test_main.py  test_model_interface.py  test_predict_ftw.py
